# avni-autopilot

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml  subject_type_parser.py
.circleci/: config.yml
.claude/commands/: curate-rules.md  spec.md
.claude/skills/: dev
requirements/: Self-service improvement.xlsx  learnings  rules.md  rules_ai_automation.xlsx  why_choose_langgraph
resources/docs/: .embeddings.json  merged_kb.md
resources/docs/entries/: access-control-in-avni.json  adding-documentation-to-forms.json  avni-architecture-overview.json  (+180 more)
resources/eval/: eval_field_rules_results
resources/input/: Astitva Modelling (1).xlsx  SRIJAN Modelling - CONSISTENT (1).xlsx
resources/rules/: rules_ai_automation.xlsx
scripts/: add_kind_column_and_qg_cluster.py  cluster_rules.py  convert_docs_kb.py  eval_field_rules.py  write_curated_fields.py  write_curated_pages.py
specs/: AVNI_DOCS_KB_SDD.md  AVNI_WEBAPP_INTEGRATION_SDD.md  BUNDLE_EDITING_SDD.md  BUNDLE_EDIT_FROM_SPEC_SDD.md  BUNDLE_GENERATOR_SDD.md  CONCEPT_ANSWER_GROUNDING_SDD.md  DEPLOYMENT_SDD.md  DETERMINISTIC_FIELD_NORMALISATION_SDD.md  FIELD_AND_PAGE_VISIBILITY_RULES_SDD.md  FORM_ENTITY_LINKING_SDD.md  FORM_LEVEL_RULES_SDD.md  FORM_RULE_BATCHING_SDD.md  INLINE_AUTOPILOT_CARDS_SDD.md  INTELLIGENT_PARSING_SDD.md  REFACTOR_SDD.md  RULE_CHAT_PREVIEW_SDD.md  VISIT_SCHEDULE_RULE_REFACTORING_SDD.md  VISIT_SCHEDULE_RULE_SDD.md  rule_generation.md
src/: _bundle_models.py  _scoping_parser.py  bundle_editor.py  bundle_generator.py  chat.py  cli.py  config.py  enricher.py  generate_bundles.py  generators.py  llm_helper.py  logging_setup.py  main.py  models.py  parser.py  pipeline.py
src/chat/: __init__.py  agent.py  prompts.py  repl.py  tools.py
src/domain/: bundle_editor.py  changes.py  diff.py  enricher.py  form_links.py  generators.py  llm.py  parser.py
src/pipeline/: __init__.py  graph.py  nodes.py  state.py
src/web/: __init__.py  app.py  auth.py  chat_service.py  events.py  sessions.py
tests/: test_web_auth.py  test_web_chat_service.py  test_web_events.py  test_web_routes.py  test_web_sessions.py
tests/domain/: test_form_links.py  test_parser_options.py  test_parser_rule_intent.py
tests/pipeline/: test_generate_rules_concurrency.py
(+113 files in other folders)
