[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "avni-ai-tools"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "httpx>=0.27.0",
    "langchain-anthropic>=0.3.0",
    "langgraph>=0.2.0",
    "openpyxl>=3.1.0",
    "pandas>=2.0.0",
    "pydantic>=2.0.0",
    "rapidfuzz>=3.0",
    "tabulate>=0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]
