[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "avni-ai-tools"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "esprima>=4.0.1",
    "fastapi>=0.110.0",
    "httpx>=0.27.0",
    "langchain-anthropic>=1.4,<2",
    "langgraph>=1.2,<2",
    "langsmith>=0.8,<1",
    "numpy>=1.26",
    "openpyxl>=3.1.0",
    "pandas>=2.0.0",
    "pydantic>=2.0.0",
    "python-multipart>=0.0.9",
    "sse-starlette>=2.1.0",
    "tabulate>=0.9",
    "uvicorn[standard]>=0.30.0",
    "voyageai>=0.3.0",
]

[project.scripts]
avni-chat = "chat.repl:run_chat"
avni-rules-kb = "domain.rules.kb_cli:main"
avni-docs-kb = "domain.docs.kb_cli:main"
avni-autopilot = "web.app:run"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
